# arm_robots

./: .gitignore  CMakeLists.txt  README.md  Readme - visual servo part.md  arm_robots.rosinstall  package.xml  repos.yaml  setup.cfg  setup.py
TO_CONVERT/: switch_to_impedance.py
UNCONVERTED_FROM_ROS1/: ik_demo.py  panda_basic_motion.py
arm_robots/: CMakeLists.txt  README.md  base_robot.py  cartesian.py  get_robot.py  hdt_michigan.py  med.py  package.xml  robot.py  robot_utils.py  victor.py  victor_planning.py
arm_robots/config/: config_val_cal.rviz  config_val_visual_servo.rviz  val_rosconsole.conf  victor_rosconsole.conf
arm_robots/launch/: med.launch  mocap_calibrate_realsense.launch  mocap_calibrate_tripodA.launch  mocap_calibrate_victor_head.launch  rviz_victor.launch  thanos.launch  trajectory_follower.launch  val.launch  val_cartesian_teleop.launch  val_off_husky.launch  victor.launch  visual_servo_val.launch
arm_robots/rviz/: val.rviz  victor.rviz
arm_robots/scripts/: COM_calc.py  basic_motion.py  calc_hdt_max_joint_speeds.py  calc_kuka_max_joint_speeds.py  camera.py  cartesian_teleop.py  hand_tf_broadcaster.py  joint_velocity_controller_test.py  manual_motion.py  med_manual_motion.py  med_motion.py  move_to.py  move_to_impedance_switch.py  nsf_nri.py  rsblock_publisher.py  rviz_traj_plot.py  table_publisher.py  test_pick_and_place.py  test_pickup.py  test_val_pose_error.py  trajectory_follower.py  trajectory_follower_node.py  val_basic_motion.py  val_cal_exec_traj.py  val_calib.launch  val_calib.py  val_calib_plotter.py  val_visit_demo.py  val_visual_servo.launch  val_yuchi_demo.py  victor_basic_motion.py  victor_hardcore_arm_test.py  victor_ipython.py  wip_jacobian_follower.py  wip_victor.py  wip_victor_old.py
arm_robots/scripts/calibration/: calc_hdt_max_joint_speeds.py  calibrate_camera_to_mocap.py  calibrate_pc_to_fk.py  calibrate_val_currents.py
arm_robots/scripts/debugging/: jacobian_follower_bug.py  victor_debugging.py
arm_robots/scripts/tutorial/: estimated_torques_demo.py  ik_demo.py  panda_basic_motion.py  test_planning_scene.pkl  victor_basic_motion.py
arm_robots/scripts/utility/: cartesian_teleop.py  manual_motion.py  move_to.py  move_to_impedance_switch.py  print_joint_state_dict.py  save_named_position.py
arm_robots/src/arm_robots/: base_robot.py  base_robot_old.py  basic_3d_pose_interactive_marker.py  cartesian.py  get_moveit_robot.py  get_robot.py  hdt_michigan.py  logitech.py  med.py  panda.py  robot.py  robot_old.py  robot_utils.py  ros_init.py  thanos.py  trajectory_follower.py  victor.py
arm_robots/src/arm_robots/config/: med_config.py  thanos_config.py  victor_config.py
arm_robots/src/arm_robots/tests/: basic_motion.py  dual_arm_test.py  test_connect_and_disconnect.py  test_robot.py  test_trajectory1.yaml  test_trajectory2.yaml  test_trajectory_follower.py  test_victor.py
arm_robots/world/: empty_with_moveit_plugin.world  empty_world.world  empty_world_sim.world  table.world  val_husky_walls.world  val_plant.world  val_walls.world  val_walls2.world  val_walls_sim.world  victor_small_table_and_walls.world  victor_small_table_and_walls_sim.world  victor_table_and_walls.world  victor_table_and_walls_sim.world  victor_table_sim.world
arm_robots_msgs/: CMakeLists.txt  nohup.out  package.xml  setup.py
arm_robots_msgs/msg/: GripperConstraint.msg  PlanningSceneNoState.msg
arm_robots_msgs/srv/: GrippersTrajectory.srv  SetCDCPDState.srv  SetGripperConstraints.srv
jacobian_follower/: CMakeLists.txt  package.xml  setup.py
jacobian_follower/include/jacobian_follower/: dual_gripper_shim.hpp  eigen_ros_conversions.hpp  eigen_transforms.hpp  jacobian_follower.hpp  jacobian_utils.hpp  listener.hpp  moveit_pose_type.hpp
jacobian_follower/launch/: STARTUP.md  jacobian_follower.launch  static_transforms.launch  vicon.launch  vicon_transform_replacements.launch
jacobian_follower/scripts/: ik_demo.py  test_jacobian.py
jacobian_follower/src/jacobian_follower/: bindings.cpp  dual_gripper_shim.cpp  jacobian_follower.cpp  jacobian_follower_main.cpp  jacobian_utils.cpp
jacobian_follower/test/: jacobian_follower.test  jacobian_follower_bindings_test.py  jacobian_follower_test.cpp
launch/: estimated_torques_demo.launch  med.launch  mocap_calibrate_tripodA.launch  mocap_calibrate_victor_head.launch  realsense.launch  rviz_victor.launch  val.launch
scripts/: grab_cloth.py  planner_example.py  planner_example_hdt_michigan.py  ros_trajectory_forwarder.py
scripts/calibration/: calibrate_val_currents.py
scripts/tutorial/: val_basic_motion.py
scripts/utility/: save_named_position.py
src/arm_robots/: __init__.py  robot.py  victor.py
src/arm_robots/tests/: basic_motion.py  m_trajectory.yaml  setting_force_limit.py  test_ros_trajectory_forwarder.py
